syntax = "proto3";

package mwitkow.testproto;

enum SomeEnum {
  OPT_1 = 0;
  OPT_2 = 1;
}

message SomeMsg {
  string some_string = 1;
  SomeEnum some_enum = 2;

  map<string, int32> some_map = 3;
}

